--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
           python-version: '3.11'
       - run: pip install -r requirements.txt
       - run: ruff check .
-      - run: black --check .
+      - run: black .
