--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
 # Postgres
-POSTGRES_DB=jobs
-POSTGRES_USER=jobs_user
-POSTGRES_PASSWORD=jobs_pass
+# Local dev only (don’t commit .env)
+POSTGRES_HOST=ep-xxxx.us-east-1.aws.neon.tech
 POSTGRES_PORT=5432
-POSTGRES_HOST=db
+POSTGRES_USER=neondb_owner
+POSTGRES_PASSWORD=***REPLACE***
+POSTGRES_DB=neondb
 
-# App
+# Or single URL (preferred)
+# DATABASE_URL=postgresql://neondb_owner:***@ep-xxxx.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+
+
+#App
 APP_ENV=dev
